--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -25,5 +26,18 @@
 			<attribute name="maven.scope" value="compile"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/karto/Documents/for Pre-sales/scootJava/lib/commons-cli-1.5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/karto/Documents/for Pre-sales/scootJava/lib/httpclient5-5.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/karto/Documents/for Pre-sales/scootJava/lib/httpclient5-cache-5.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/karto/Documents/for Pre-sales/scootJava/lib/httpclient5-fluent-5.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/karto/Documents/for Pre-sales/scootJava/lib/httpclient5-testing-5.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/karto/Documents/for Pre-sales/scootJava/lib/httpcore5-5.2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/karto/Documents/for Pre-sales/scootJava/lib/httpcore5-h2-5.2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/karto/Documents/for Pre-sales/scootJava/lib/httpcore5-reactive-5.2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/karto/Documents/for Pre-sales/scootJava/lib/httpcore5-testing-5.2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/karto/Documents/for Pre-sales/scootJava/lib/reactive-streams-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/karto/Documents/for Pre-sales/scootJava/lib/rxjava-2.2.21.jar"/>
+	<classpathentry kind="lib" path="C:/Users/karto/Documents/for Pre-sales/scootJava/lib/rxjava-3.1.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/karto/Documents/for Pre-sales/scootJava/lib/slf4j-api-1.7.36.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
